# bevy-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
assets/: README.md  beat-thee.md  craft.md  game.assets.ron  menu.assets.ron  state.yaml
dev/: justfile
src/: assets.rs  console.rs  fullscreen.rs  game.rs  input.rs  main.rs  menus.rs  splash.rs  state.rs  style.rs  ui.rs
src/game/: mod.rs  ui.rs
src/ui/: menu.rs  splash.rs  stats.rs
web/: index.html  restart-audio-context.js
