[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2021"

[features]
default = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.12.0"

# Bevy plugins
slowchop_console = { version = "0.1.1" }
leafwing-input-manager = "0.11.1"
bevy_asset_loader = { version = "0.18.0" , features = ["2d", "standard_dynamic_assets"] }
bevy-inspector-egui = "0.21.0"

# Other
tracing-subscriber = "0.3.18"
strum = { version = "0.25.0", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# opt-level = 3 has some segfault issues
[profile.dev.package."*"]
opt-level = 2
