[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"

# Bevy plugins
slowchop_console = { version = "0.1.2", path = "../slowchop_console/slowchop_console" }
bevy-ui-dsl = "0.7.1"
leafwing-input-manager = "0.11.1"
bevy_asset_loader = { version = "0.18.0" , features = ["standard_dynamic_assets"] }
bevy-inspector-egui = "0.21.0"

# Other
tracing-subscriber = { version = "0.3.18" }
strum = { version = "0.25.0", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# opt-level = 3 has some segfault issues
# https://github.com/bevyengine/bevy/issues/10524
[profile.dev.package."*"]
opt-level = 2

# https://github.com/bevyengine/bevy/tree/main/examples#optimizing
[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
