[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2021"

[dependencies]

# Bevy plugins
slowchop_console = { version = "0.1.2", path = "../slowchop_console/slowchop_console" }
iyes_progress = "0.10.0"
bevy-ui-dsl = "0.7.1"
leafwing-input-manager = "0.11.1"
bevy_asset_loader = { version = "0.19.1", features = ["standard_dynamic_assets"] }
bevy-inspector-egui = "0.22.1"
bevy_kira_audio = { version = "0.18.0", features = ["mp3"]}

# Other
tracing-subscriber = { version = "0.3.18" }
strum = { version = "0.26.1", features = ["derive"] }

[dependencies.bevy]
version = "0.12.1"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# opt-level = 3 has some segfault issues
# https://github.com/bevyengine/bevy/issues/10524
[profile.dev.package."*"]
opt-level = 2

# https://github.com/bevyengine/bevy/tree/main/examples#optimizing
[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1
